# cpphycis-engine

./: .gitignore  CMakeLists.txt  README.md  engine.cpp  engine.h  imgui.ini  main.cpp  silnik  silnik_dod  spring.h  vec2d.h
.VSCodeCounter/2026-06-08_13-13-59/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-06-08_13-57-57/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-06-08_14-02-11/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-06-08_15-58-05/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-06-08_17-11-56/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cache/clangd/index/: engine.cpp.D085289FA01E6FD2.idx  engine.h.FDAEF7416AD2FD3E.idx  grid.h.5533FB9ABEFE7582.idx  main.cpp.97444EDD9FAD972E.idx  renderer.cpp.8741A1CC46E713BC.idx  renderer.h.5B0ECC010B615615.idx  softBody.h.6AD2173A55FEEC8C.idx  softBodyFactory.cpp.8A88FA3A82033B7C.idx  softBodyFactory.h.A9A78AFCFB5B317C.idx  spring.h.9EA3EA054ECB78A6.idx  ui.cpp.9EB23CDE6C3576F2.idx  ui.h.8D58D602052DE142.idx  vec2d.h.06C0CE79C5169360.idx
include/physics/: engine.h  grid.h  softBody.h  softBodyFactory.h  soft_body.h  spring.h  vec2d.h
include/render/: renderer.h
include/ui/: ui.h
src/: main.cpp
src/physics/: engine.cpp  softBodyFactory.cpp
src/render/: renderer.cpp
src/ui/: ui.cpp
